<resources>
    <string name="app_name">Homework2Patika</string>
    <string name="welcome_to_bauuss">Welcome to\nBauuss!</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="example_example_com">example@example.com</string>
    <string name="_8_characters">+8 characters</string>
    <string name="register">Register</string>
</resources>