<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="false">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUpActivity">

        <ImageButton
            android:id="@+id/imageButtonGoBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="@dimen/default_margin_32dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="64dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/size_text_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/default_margin_32dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="@dimen/default_margin_32dp"
            android:text="@string/username"
            android:textColor="@color/soft_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/default_margin_32dp"
            android:background="@drawable/custom_edittext_with_round_30"
            android:minHeight="40dp"
            android:inputType="text"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="24dp"
            android:text="@string/email_address"
            android:textColor="@color/soft_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/default_margin_32dp"
            android:hint="@string/example_example_com"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:background="@drawable/custom_edittext_with_round_30"
            android:minHeight="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="@color/soft_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/default_margin_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edittext_with_round_30"
                android:hint="@string/_8_characters"
                android:inputType="textPassword"
                android:minHeight="32dp"
                android:padding="8dp" />
            <ImageButton
                android:id="@+id/imageViewVisibilityOfPassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_visibility_off_24" />
        </FrameLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/default_margin_32dp"
            android:background="@drawable/custom_button_with_round_30"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/cityscapes_town"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>